--- a/SharpMetal/SharpMetal.csproj
+++ b/SharpMetal/SharpMetal.csproj
@@ -8,10 +8,15 @@
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <Version>1.0.0-preview1</Version>
         <Description>Handcrafted Metal bindings for C#</Description>
-        <PackageProjectUrl>https://github.com/IsaacMarovitz/SharpMetal</PackageProjectUrl>
         <RepositoryUrl>https://github.com/IsaacMarovitz/SharpMetal</RepositoryUrl>
         <RepositoryType>git</RepositoryType>
         <PackageTags>metal</PackageTags>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
     </PropertyGroup>
+
+    <ItemGroup>
+        <None Include="..\README.md" Pack="true" PackagePath="\"/>
+    </ItemGroup>
 
 </Project>
