Find and build selectors
TBD: Scope them to a particular class/struct

--- a/SharpMetal.Generator/SharpMetal.Generator.csproj
+++ b/SharpMetal.Generator/SharpMetal.Generator.csproj
@@ -17,4 +17,8 @@
       <Folder Include="Headers\" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\SharpMetal\SharpMetal.csproj" />
+    </ItemGroup>
+
 </Project>
