--- a/SharpMetal/SharpMetal.csproj
+++ b/SharpMetal/SharpMetal.csproj
@@ -19,4 +19,8 @@
         <None Include="..\README.md" Pack="true" PackagePath="\" />
     </ItemGroup>
 
+    <ItemGroup>
+        <ProjectReference Include="..\SharpMetal.ObjectiveCCore\SharpMetal.ObjectiveCCore.csproj" />
+    </ItemGroup>
+
 </Project>
