--- a/.editorconfig
+++ b/.editorconfig
@@ -65,3 +65,8 @@ resharper_csharp_namespace_body = block_scoped
 # Code-block preferences
 csharp_prefer_braces = true:warning
 csharp_prefer_simple_using_statement = true:suggestion
+
+
+[*.yml]
+
+indent_size = 2
