--- a/src/SharpMetal.Examples.ComputeToRender/SharpMetal.Examples.ComputeToRender.csproj
+++ b/src/SharpMetal.Examples.ComputeToRender/SharpMetal.Examples.ComputeToRender.csproj
@@ -2,11 +2,12 @@
 
     <PropertyGroup>
         <TargetFramework>net7.0</TargetFramework>
+        <OutputType>Exe</OutputType>
         <RuntimeIdentifiers>osx-x64</RuntimeIdentifiers>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <OutputType>Exe</OutputType>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+        <IsPackable>false</IsPackable>
     </PropertyGroup>
 
     <ItemGroup>
