--- a/src/SharpMetal.Generator/SharpMetal.Generator.csproj
+++ b/src/SharpMetal.Generator/SharpMetal.Generator.csproj
@@ -5,12 +5,7 @@
         <OutputType>Exe</OutputType>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-    </PropertyGroup>
-
-    <PropertyGroup Condition="'$(RuntimeIdentifier)' != ''">
-        <PublishSingleFile>true</PublishSingleFile>
-        <PublishTrimmed>true</PublishTrimmed>
-        <TrimMode>partial</TrimMode>
+        <IsPackable>false</IsPackable>
     </PropertyGroup>
 
     <ItemGroup>
