Setup of ComputeToRender for Xcode-based debug

--- a/src/SharpMetal.Examples.ComputeToRender/SharpMetal.Examples.ComputeToRender.csproj
+++ b/src/SharpMetal.Examples.ComputeToRender/SharpMetal.Examples.ComputeToRender.csproj
@@ -2,6 +2,7 @@
 
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
+        <AssemblyName>ComputeToRender</AssemblyName>
         <OutputType>Exe</OutputType>
         <RuntimeIdentifiers>osx-x64</RuntimeIdentifiers>
         <ImplicitUsings>enable</ImplicitUsings>
