--- a/src/SharpMetal.Examples.Animation/SharpMetal.Examples.Animation.csproj
+++ b/src/SharpMetal.Examples.Animation/SharpMetal.Examples.Animation.csproj
@@ -2,6 +2,7 @@
 
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
+        <AssemblyName>Animation</AssemblyName>
         <OutputType>Exe</OutputType>
         <RuntimeIdentifiers>osx-x64</RuntimeIdentifiers>
         <ImplicitUsings>enable</ImplicitUsings>
