--- a/src/SharpMetal/SharpMetal.csproj
+++ b/src/SharpMetal/SharpMetal.csproj
@@ -18,7 +18,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <None Include="..\..\README.md" Pack="true" PackagePath="\" />
+        <None Include="..\..\Package_README.md" Pack="true" PackagePath="\" />
     </ItemGroup>
 
 </Project>
