--- a/src/SharpMetal/SharpMetal.csproj
+++ b/src/SharpMetal/SharpMetal.csproj
@@ -1,12 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <Platforms>x64;ARM64</Platforms>
+        <AssemblyName>SharpMetal</AssemblyName>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-        <Version>1.0.0-preview10</Version>
+        <Version>1.0.0-preview11</Version>
         <Description>Handcrafted Metal bindings for C#</Description>
         <RepositoryUrl>https://github.com/IsaacMarovitz/SharpMetal</RepositoryUrl>
         <RepositoryType>git</RepositoryType>
@@ -20,5 +21,4 @@
     <ItemGroup>
         <None Include="..\..\Package_README.md" Pack="true" PackagePath="\" />
     </ItemGroup>
-
 </Project>
