Move shaders to seperate files

--- a/src/SharpMetal.Examples.Animation/SharpMetal.Examples.Animation.csproj
+++ b/src/SharpMetal.Examples.Animation/SharpMetal.Examples.Animation.csproj
@@ -14,5 +14,9 @@
     <ItemGroup>
         <ProjectReference Include="..\SharpMetal.Examples.Common\SharpMetal.Examples.Common.csproj" />
     </ItemGroup>
+    
+    <ItemGroup>
+        <EmbeddedResource Include="Shaders\Shader.metal" />
+    </ItemGroup>
 
 </Project>
