--- a/src/SharpMetal.Examples.Primitive/SharpMetal.Examples.Primitive.csproj
+++ b/src/SharpMetal.Examples.Primitive/SharpMetal.Examples.Primitive.csproj
@@ -15,4 +15,8 @@
         <ProjectReference Include="..\SharpMetal.Examples.Common\SharpMetal.Examples.Common.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+        <EmbeddedResource Include="Shaders\Shader.metal" />
+    </ItemGroup>
+
 </Project>
