--- a/src/SharpMetal.Generator/SharpMetal.Generator.csproj
+++ b/src/SharpMetal.Generator/SharpMetal.Generator.csproj
@@ -6,6 +6,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <IsPackable>false</IsPackable>
+        <RuntimeIdentifier Condition="'$(RuntimeIdentifier)' == '' AND '$(PackAsTool)' != 'true'">$(NETCoreSdkRuntimeIdentifier)</RuntimeIdentifier>
     </PropertyGroup>
 
     <ItemGroup>
@@ -14,6 +15,13 @@
 
     <ItemGroup>
       <ProjectReference Include="..\SharpMetal\SharpMetal.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="CppAst" Version="0.15.0" />
+      <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
     </ItemGroup>
 
 </Project>
