--- a/src/SharpMetal.Examples.Common/SharpMetal.Examples.Common.csproj
+++ b/src/SharpMetal.Examples.Common/SharpMetal.Examples.Common.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
+        <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
         <RuntimeIdentifiers>osx-x64</RuntimeIdentifiers>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
